--- a/submit.html
+++ b/submit.html
@@ -7,7 +7,7 @@
     <title>Submit page</title>
 </head>
 <body>
-    <form action="form.html">
+    <form action="index.html">
         <h2>Submit page</h2>
         <img src="https://media4.giphy.com/media/3oxHQqNj7QbuQlTbQA/giphy.gif" alt="artist"><br><br>
         <input type="submit" value="Back">
